examples/route/helloopenshift.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld-openshift
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: helloopenshift
    spec:
      containers:
      - name: okd-demo
        image: amitvashist7/hello-openshift:v3
        ports:
        - name: node-port
          containerPort: 8080
