examples/route/hello-deployment-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: helloworld
  name: hello-deployment
  namespace: hello-openshift-project
spec:
  host: console.asia-south1-c.c.sapient-office-218912.internal
  path: /hello
  to:
    kind: Service
    name: helloworld-deployment
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    host: console.asia-south1-c.c.sapient-office-218912.internal
    routerName: router
    wildcardPolicy: None
