examples/route/hello-openshift-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: helloworld-openshift
  name: helloworld-openshift
  namespace: hello-openshift-project
spec:
  host: console.asia-south1-c.c.sapient-office-218912.internal
  path: /openshift
  to:
    kind: Service
    name: helloworld-openshift 
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    host: console.asia-south1-c.c.sapient-office-218912.internal
    routerName: router
    wildcardPolicy: None
